--- a/16_09_22.md
+++ b/16_09_22.md
@@ -5,7 +5,7 @@ git push - отправить на гит все коммиты\
 git fetch - получить информацию об удаленном сервере (затем git merge origin/master)\
 git pull - git fetch + git merge\
 Как добавить удалённый сервер:\
-git remote add gitlab 'link'
+git remote add gitlab 'link'\
 git push gitlab master (--delete - удалить удалённую ветку)
 ## Модели ветвления
 ### Модель Gitflow
