--- a/23_09_22.md
+++ b/23_09_22.md
@@ -1,1 +1,5 @@
 # Лекция 23.09.2022
+git cat-file 'name_hash' - вывести объект репозитория по хешу.\
+git gc - сжимает репозиторий, превращает все файлы в _pack-файлы_, вычищает те коммиты, которые являются недоступные, и старается вычищать файлы, которые не используются.\
+![image](https://user-images.githubusercontent.com/79001610/191916712-832b69e3-619a-4b21-9ea0-7631a970059d.png)
+git rebase 'name' - берёт изменения из С4 и создаёт новый коммит С4', указывающий на master. После этого можно сделать привычный нам fast-forward merge, и тогда в С4' будет С3 + delta(C4)
